--- a/Backend/package.json
+++ b/Backend/package.json
@@ -16,7 +16,11 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "mongodb": "^6.6.1"
+    "mongodb": "^6.6.1",
+    "mongoose": "^8.4.1",
+    "node-cache": "^5.1.2",
+    "nodemailer": "^6.9.13",
+    "otp-generator": "^4.0.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
