--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,11 +10,12 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "axios": "^1.6.8",
+    "axios": "^1.7.2",
     "base-64": "^1.0.0",
     "dotenv": "^16.4.5",
     "firebase": "^10.11.1",
     "react": "^18.3.1",
+    "react-device-detect": "^2.2.3",
     "react-dom": "^18.3.1",
     "react-firebase-hooks": "^5.1.1",
     "react-google-button": "^0.8.0",
