Implement i18next for multilingual support of static content

--- a/Backend/package.json
+++ b/Backend/package.json
@@ -11,11 +11,15 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@google-cloud/translate": "^8.3.0",
+    "@vitalets/google-translate-api": "^9.2.0",
     "axios": "^1.7.2",
     "base-64": "^1.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "express-rate-limit": "^7.3.1",
+    "google-translate-api": "^2.3.0",
     "mongodb": "^6.6.1",
     "mongoose": "^8.4.1",
     "node-cache": "^5.1.2",
