--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,11 +14,14 @@
     "base-64": "^1.0.0",
     "dotenv": "^16.4.5",
     "firebase": "^10.11.1",
+    "i18next": "^23.11.5",
+    "i18next-browser-languagedetector": "^8.0.0",
     "react": "^18.3.1",
     "react-device-detect": "^2.2.3",
     "react-dom": "^18.3.1",
     "react-firebase-hooks": "^5.1.1",
     "react-google-button": "^0.8.0",
+    "react-i18next": "^14.1.2",
     "react-router-dom": "^6.23.0",
     "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4"
